@@ -106,6 +106,11 @@ o) +M - Cannot talk on channel unless registered with NickServ
 o) +S - Cannot join channel unless using SSL
 
 
+-- ircd-hybrid-8.0.4 Release Notes
+o) Fixed possible core on USERHOST/ISON with optimization enabled
+o) Fixed bug where can_flood sometimes didn't work as expected
+
+
 -- ircd-hybrid-8.0.3 Release Notes
 o) Fixed core on UNDLINE
 o) XLINE/KLINE/RESV/DLINE/SQUIT and KILL now have the same default reason
